BugFix: highscore was getting reset when game restarted and food generated at wrong position

--- a/react-exercises/snake-game-react/src/components/cell/cell.styles.css
+++ b/react-exercises/snake-game-react/src/components/cell/cell.styles.css
@@ -1,6 +1,6 @@
 .cell {
   /* background-color: #000000; */
-  border-radius: 3px;
+  border-radius: 2px;
   width: 15px;
   box-shadow: inset 0px 0px 4px 0px #ececec;
   height: 15px;
