--- a/react-exercises/snake-game-react/src/components/game-controller/game-controller.styles.css
+++ b/react-exercises/snake-game-react/src/components/game-controller/game-controller.styles.css
@@ -1,5 +1,5 @@
 .mobile-controls {
   display: flex;
   justify-content: center;
-  margin-top: 50px;
+  margin-top: 35px;
 }
