--- a/react-exercises/snake-game-react/src/pages/homepage/homepage.styles.css
+++ b/react-exercises/snake-game-react/src/pages/homepage/homepage.styles.css
@@ -27,5 +27,5 @@
   color: #f44336;
   text-align: center;
   font-size: 14px;
-  margin-top: 50px;
+  margin-top: 35px;
 }
